fix footer infinite fetch and align footer-bottom

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -40,25 +40,34 @@
 
 .footer {
   background-color: #272b2e;
+  overflow: auto;
+  /* display: grid; */
+  /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
 }
 
-.footer ul {
+.footer-wrapper {
+  padding: 0rem 10rem;
+}
+
+.footer-bottom ul {
   display: flex;
   justify-content: start;
   padding: 0;
   list-style: none;
   gap: 20px;
+  float: left;
 }
 
-.footer li {
+.footer-bottom li {
   padding: 0 10px;
 }
 
-.footer p {
+.footer-bottom p {
   margin-left: 0;
   font-size: 0.8em;
   color: #fff;
   opacity: 0.7;
+  float: right;
 }
 
 .colorStripe {
